--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ MEGRA 2K25 — The revolution begins May 09 @ 9:30 AM!
                     </div>
                     <div class="events">
                         <img src="images/free-autocad.jpg" alt="event" class="events-img">
-                        <h4 class="events-title">CAD Modlling</h4>
+                        <h4 class="events-title">CAD Modelling</h4>
                         <h4 class="event-coordinator">D.Bharathiraja-III Year-B.E Mech-contact No:9025158365</h4>
                         <h4 class="events-title">Venue:Cad Lab</h4>
                     </div>
