--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 </center>
                 
                 
-                <h3>Department of Mechanical Engineering</h3>
+                <h3>Department of <br> Mechanical Engineering</h3>
                 <h3>Proudly Presents</h3>
-                <h2> A National Level  Technical Symposium</h2>
+                <h2> A National Level <br>  Technical Symposium</h2>
                 <div class="fire-container">
                     <h1 class="fire-text"> MEGRA 2K25</h1>
                 </div>
@@ -111,13 +111,13 @@
                         <center>
                             <h3>About us</h3>
                         <h2>MEGRA 2K25</h2>
-                            <P class="about-text">🔥 Welcome to MEGRA 2K25 – Where Innovation Meets Revolution! 🔧
+                            <P class="about-text" class="justified">🔥 Welcome to MEGRA 2K25 – Where Innovation Meets Revolution! 🔧
                                 Brought to you by the Mechanical Engineering Department of M.A.M College of Engineering and Technology, MEGRA 2K25 isn’t just a symposium — it’s a movement celebrating the power and progress of Mechanical Engineering.
 
                             </P>
-                            <p class="about-text">📅 Date: May 09, 2025
+                            <p class="about-text"><b>📅 Date: May 09, 2025
                                 🕘 Time: 9:30 AM onwards
-                                📍 Venue: M.A.M College of Engineering and Technology
+                                📍 Venue: M.A.M College of Engineering and Technology</b>
                             </p>
                             <p class="about-text">this year’s theme, “Revolution of Mechanical Engineering,” takes you from the roaring engines of the past to the AI-driven future of tech and automation.
 
@@ -167,7 +167,7 @@ MEGRA 2K25 — The revolution begins May 09 @ 9:30 AM!
                 <center>
                 <div class="events-inventory clearfix">
                     <div class="events">
-                        <img src="images/ppt.jpg" alt="event" class="events-img">
+                        <img src="images/ppt.25" alt="event" class="events-img">
                         <h4 class="events-title">Paper Presentation</h4>
                         <h4 class="event-coordinator">S.Nantha Gopal-III Year-B.E Mech-contact No:6381349731</h4>
                         <h4 class="events-title">Venue:Newton Hall</h4>
