--- a/index.html
+++ b/index.html
@@ -243,44 +243,44 @@
                 <div class="events-inventory clearfix">
                     <div class="events">
                         <img src="images/nan.ppt" alt="event" class="events-img">
-                        <h4 class="events-title">Paper Presentation</h4>
-                        <h4 class="event-coordinator">S.Nanthagopal</h4>
+                        <h4 class="events-title">Paper Presentation <br> Student Co-ordinator</h4>
+                        <h4 class="event-coordinator">S.Nanthagopal-III Year-B.E Mech</h4>
                         <h4 class="events-title">Venue:Newton Hall</h4>
                     </div>
                     <div class="events">
                         <img src="images/cad-b.jpg" alt="event" class="events-img">
-                        <h4 class="events-title">CAD Modelling</h4>
-                        <h4 class="event-coordinator">D.Bharathiraja</h4>
+                        <h4 class="events-title">CAD Modelling<br> Student Co-ordinator</h4>
+                        <h4 class="event-coordinator">D.Bharathiraja-III Year-B.E Mech</h4>
                         <h4 class="events-title">Venue:Cad Lab</h4>
                     </div>
                     <div class="events">
                         <img src="images/mr.jpeg" alt="event" class="events-img">
-                        <h4 class="events-title">Mr.LATHE</h4>
-                        <h4 class="event-coordinator">M.Madhavan</h4>
+                        <h4 class="events-title">Mr.LATHE<br> Student Co-ordinator</h4>
+                        <h4 class="event-coordinator">M.Madhavan-III Year-B.E Mech</h4>
                         <h4 class="events-title">Venue:MT Lab</h4>
                     </div>
                     <div class="events">
                         <img src="images/water rocketry.jpg" alt="event" class="events-img">
-                        <h4 class="events-title">WATER ROCKETRY</h4>
-                        <h4 class="event-coordinator">A.Hariprabu</h4>
+                        <h4 class="events-title">WATER ROCKETRY<br> Student Co-ordinator</h4>
+                        <h4 class="event-coordinator">A.Hariprabu-III Year-B.E Mech</h4>
                         <h4 class="events-title">Venue:Basic Workshop</h4>
                     </div>
                     <div class="events">
                         <img src="images/connection..25" alt="event" class="events-img">
-                        <h4 class="events-title">CONNECTION</h4>
+                        <h4 class="events-title">CONNECTION<br> Student Co-ordinator</h4>
                         <h4 class="event-coordinator">K.Vinoth-II Year</h4>
                         <h4 class="events-title">Venue:Dynamics Lab</h4>
                     </div>
                     <div class="events">
                         <img src="images/Welding-Operator.jpg" alt="event" class="events-img">
-                        <h4 class="events-title">WELDING</h4>
-                        <h4 class="event-coordinator">S.Manmathavalavan</h4>
+                        <h4 class="events-title">WELDING<br> Student Co-ordinator</h4>
+                        <h4 class="event-coordinator">S.Manmathavalavan-III Year-B.E Mech</h4>
                         <h4 class="events-title">Venue:Basic Workshop</h4>
                     </div>
                     <div class="events">
                         <img src="images/tech.png" alt="event" class="events-img">
-                        <h4 class="events-title">TECH FUN GAMES</h4>
-                        <h4 class="event-coordinator">M.Paramasivam</h4>
+                        <h4 class="events-title">TECH FUN GAMES <br>Student Co-ordinator </h4>
+                        <h4 class="event-coordinator">M.Paramasivam-III Year-B.E Mech</h4>
                         <h4 class="events-title">Venue:Newton Hall</h4>
                     </div>
                 </center>
