--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 </head>
 <body>
     <nav class="navbar">
-    <div class="navdiv">
-        <div class="logo">
+        <div class="navdiv">
+          <div class="logo">
             <a href="#">MEGRA 2K25</a>
-        </div>
-        <ul class="nav-list">
+          </div>
+          <ul class="nav-list">
             <li><a href="#header" class="nav-link">Home</a></li>
             <li><a href="#about" class="nav-link">About</a></li>
             <li><a href="#events" class="nav-link">Events</a></li>
             <li><a href="#contact" class="nav-link">Contact</a></li> 
-        </ul>
-    </div>
-</nav>
+          </ul>
+        </div>
+      </nav>
+      
 
         <!--Header Startet-->
         <header class="header" id="header">
@@ -113,7 +114,7 @@
                     <p class="about-text">This year’s theme, <b class="gradient-text">"Revolution of Mechanical Engineering"</b></p>
                     <p class="about-text">
                         🎨 <b>Theme Colors:</b><br><br>
-                        The color <span class="reddish-orange-text">reddish orange</span> marks the early days of machine<br>
+                        <br> <span class="reddish-orange-text"> <br>Fiery🔥Orange</span> marks the early days of machine<br>
                         <span class="blue-text">Blue</span> – Representing today’s advanced technologies and future-forward thinking
                     </p>
                     <p class="about-text">
@@ -304,7 +305,8 @@
           </div>
           <h4 class="contact-title">Address</h4>
           <p class="contact-text">
-            M.A.M College of Engineering and Technology
+            Department of Mechanical Engineering <br>
+            M.A.M College of Engineering and Technology <br>
             Trichy-Chennai Trunk Road,<br>
             Siruganur,<br>
             Trichy-621 105
@@ -320,7 +322,7 @@
           </div>
           <h4 class="contact-title">Staff Co-ordinator</h4>
           <p class="contact-text">
-            Mr. S. Sasidharan<br>
+            Mr. C. Sasidharan<br>
             Assistant Professor, Mech Department<br>
             Mobile No: 9629500731
           </p>
@@ -460,6 +462,13 @@
             <a href="https://chat.whatsapp.com/EHMpevziueRFnoSsq9gjb0" target="_blank" class="social-icon" title="Chat with us on WhatsApp">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7 .9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/>
                 </svg>
+            </a>
+            <!---Location Icon-->
+            <a href="https://goo.gl/maps/4X8QaKCBtVdRaSnY6" target="_blank" class="social-icon" title="Chat with us on WhatsApp">
+                
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/>
+                </svg>
+                </a>
             </a>
         </div>
         <h4 class="footer-text">&copy;2025 <span class="company">Megra2k25</span> All rights reserved</h4>
