--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="about-img">
             <div class="about-picture-container">
                 <center>
-                    <img src="images/Your paragraph text.jpg" alt="mech" class="about-picture"> 
+                    <img src="images/mani-megra.png" alt="mech" class="about-picture"> 
                 </center>
             </div>
         </div>
