--- a/index.html
+++ b/index.html
@@ -337,8 +337,11 @@
           </div>
           <h4 class="contact-title">Student Co-ordinator</h4>
           <p class="contact-text">
-            M. Paramasivam<br>
-            Mobile No: 9489789743
+            <br>
+            TamilMani(IV Yr/Mech) <br> 96775 13678 <br>
+            M.Paramasivam (III Yr/Mech) <br>  9489789743 <br>
+            K.Ramraj(II Yr/Mech)  <br> 63833 91412 <br>
+            
           </p>
         </div>
   
